# drum-transcription-api

./: .gitignore  11CLASS_API_TEST_RESULTS.md  CHECKPOINT_COMPARISON.md  CONTRIBUTING.md  DATASET_VALIDATION_RESULTS.md  FINAL_TEST_RESULTS.md  FIX_SUMMARY.md  HIERARCHICAL_INTEGRATION.md  LICENSE  MIDI_OUTPUT_SUMMARY.md  ONSET_REFINEMENT_README.md  PLAN_ONSET_TIMING_EVALUATION.md  PLAN_STEM_SEPARATION.md  QUICK_START.md  README.md  SECURITY.md  TEST_RESULTS_STEM_SEPARATION.md  USAGE_EXAMPLES.md  debug_predictions.py  pyproject.toml  start_server.sh  test_11class_direct.py  test_api.py  test_api_startup.py  test_dataset_validation.py  test_end_to_end.py  test_hierarchical_integration.py  test_onset_refinement.py  test_roland_api.py
docs/: API_REFERENCE.md  CHANGELOG.md  DEPLOYMENT.md  DEVELOPMENT.md  TROUBLESHOOTING.md
drum_transcription_api/: __init__.py  hierarchical_utils.py  main.py  onset_refinement.py  transcription.py
evaluation/: __init__.py  compare_baseline_vs_refined.py  metrics_calculator.py  onset_matcher.py  onset_parser.py
evaluation_results/: baseline_vs_refined_comparison.json
test_audio/: raw_predictions.json  raw_predictions.npy
test_audio/OLD/: 32 Soft Pink Glow_predictions.json  raw_predictions.json
test_comparison/: COMPARISON_ANALYSIS.md  README.md
