[project]
name = "drum-transcription-api"
version = "0.1.0"
description = "FastAPI server for drum transcription using trained CRNN model"
authors = [
    {name = "Drum Transcription Team"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "torch>=2.4.0",
    "lightning>=2.4.0",
    "librosa>=0.10.2",
    "pretty-midi>=0.2.10",
    "scipy>=1.11.0",
    "numpy>=1.26.0",
    "pydantic>=2.5.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
